# pto-fusebox

./: .gitignore  CMakeLists.txt  Makefile  NOTICE  PROBLEM.md  README.md  generate_benchmarks.py  run_benchmarks.sh  run_single.sh  visualize.py
.claude/: settings.json
benchmarks/: 910b-2mm-accumulate.json  910b-2mm-chained.json  910b-2mm-indep.json  910b-2mm-small-m.json  910b-2mm-wide-c.json  910b-attention-b128.json  910b-chain-internal-k.json  910b-chain-no-ksplit.json  910b-chain-parallel-k.json  910b-deep-chain-8mm.json  910b-fewrow-reduction.json  910b-ffn-b128.json  910b-ffn.json  910b-large-matmul.json  910b-mixed-mlp.json  910b-mixed-mm-mm-pw.json  910b-mixed-mm-pw-compute.json  910b-mixed-mm-pw-pw.json  910b-mixed-mm-pw-tight-ub.json  910b-mixed-mm-pw.json  910b-mixed-mm-relu.json  910b-pointwise.json  910b-pw-fusion.json  910b-pypto-l0-matmul.json  910b-pypto-large-square.json  910b-pypto-short-n.json  910b-softmax-stream-32k.json  910b-softmax.json  910b-square-membound.json  910b-supernative.json  910b-thin-matmul.json  910b-transformer-block.json  910b-twopool-cube.json  asym-native-attn.json  asym-native-chain.json  bert-block.json  custom-bottleneck-3br.json  custom-convlike-6layer.json  custom-deep-narrow-20.json  custom-enc-dec-2x3.json  (+32 more)
benchmarks/solutions/: ml-1-sol.dot  ml-1-sol.json  ml-13-sol.dot  ml-13-sol.json  ml-17-sol.dot  ml-17-sol.json  ml-5-sol.dot  ml-5-sol.json  ml-9-sol.dot  ml-9-sol.json
doc/: 910b_cost_model.md  PARTITION_FM.md  SOLUTION_FM.md  acyclicity_check.md  cost_model.md  ephemeral_gap_check.md  grounded_cost_model.md  move_audit_pattern.md  partition_fm.md  symmetry.md
fusion_dag/: .gitignore
scripts/: baseline.json  build_ubuntu22.sh  gen_910b_benchmarks.py  generate_benchmarks.py  regression.py  render_fusion_dag.sh  solve_and_verify.sh  verify_dimensions.py  verify_solutions.sh  visualize.py
src/: COST_MODEL.md
src/core/: ascend910b_cost.cpp  ascend910b_cost.h  cost.cpp  cost.h  cost_cache.h  cost_model.h  dag.cpp  dag.h  flat_set.h  group_dag.cpp  group_dag.h  l0_matmul_plan.cpp  l0_matmul_plan.h  pebbling_order.cpp  pebbling_order.h  subgraph.cpp  subgraph.h  subgraph_structure.cpp  subgraph_structure.h  types.h
src/init/: init_strategies.cpp  init_strategies.h  symm_init.cpp  symm_init.h
src/io/: io.cpp  io.h  verify.cpp  verify.h
src/merkle/: merkle_hash.h
src/partition/: partition.cpp  partition.h
src/pipeline/: evaluate.cpp  main.cpp  partition_app.cpp  reference_evaluator.cpp  solver.cpp  solver.h  symmetry_app.cpp
src/postopt/: post_opt.cpp  post_opt.h
src/search/: active_set.cpp  active_set.h  coupled_fm_outer.cpp  coupled_fm_outer.h  coupled_fm_pass.cpp  coupled_fm_pass.h  coupled_fm_search.cpp  coupled_fm_search.h  coupling_parallel_search.cpp  coupling_parallel_search.h  coupling_search.cpp  coupling_search.h  evolution.cpp  evolution.h  feasibility.cpp  feasibility.h  fm_outer.cpp  fm_outer.h  fm_pass.cpp  fm_pass.h  fm_search.cpp  fm_search.h  local_search.cpp  local_search.h  parallel_search.cpp  parallel_search.h  partition_moves.cpp  partition_moves.h  pool.h  solution_search.cpp  solution_search.h  structural_ops.cpp  structural_ops.h  symm_mutations.cpp  symm_mutations.h  verbose.cpp  verbose.h
src/solution/: ordering.cpp  ordering.h  solution.cpp  solution.h
src/symmetry/: merkle_hash.h  series.h  symmetry.h
src/util/: pairing_heap.h
test/: ascend_910b_test.cpp  chained_matmul_test.cpp  constructed_optima_test.cpp  cost_cache_test.cpp  cost_model_test.cpp  coupled_fm_correctness_test.cpp  coupling_moves_test.cpp  coupling_test.cpp  cross_validate.cpp  dag_test.cpp  de_recompute_correctness_test.cpp  eject_correctness_test.cpp  ephemeral_retain_test.cpp  epilogue_splitk_test.cpp  evolution_test.cpp  fanin_matmul_test.cpp  fm_search_test.cpp  fm_test.cpp  gain_update_test.cpp  granule_bound_test.cpp  incremental_dag_test.cpp  init_strategies_test.cpp  io_test.cpp  large_subgraph_test.cpp  local_search_test.cpp  merge_correctness_test.cpp  more_unit_tests.cpp  move_gain_test.cpp  multi_role_test.cpp  ordering_test.cpp  pairing_heap_test.cpp  parallel_search_test.cpp  partition_fm_test.cpp  partition_test.cpp  pebbling_order_test.cpp  problem_examples_test.cpp  prologue_pw_test.cpp  recompute_correctness_test.cpp  regression_test.cpp  retain_snake_test.cpp  (+13 more)
writeup/: writeup.aux  writeup.tex
